--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Metronic | Dashboard
-		</title>
+			
+			Angular Dzone Tutorial
+                </title>        
 		<base href="/">
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +22,7 @@
 		<link href="./assets/vendors/base/vendors.bundle.css" rel="stylesheet" type="text/css" />
 		<link href="./assets/demo/default/base/style.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Base Styles -->
-		<link rel="shortcut icon" href="assets/demo/default/media/img/logo/favicon.ico" />
+		<link rel="shortcut icon" href="http://ca1.mycatool.com/assets/global/images/favicon.png" />
 		<script src="//www.amcharts.com/lib/3/amcharts.js" type="text/javascript"></script>
 		<script src="//www.amcharts.com/lib/3/serial.js" type="text/javascript"></script>
 		<script src="//www.amcharts.com/lib/3/themes/light.js" type="text/javascript"></script>
