Vendor and Vendor Billing List and Add Form UI + Add Email Template Form

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<title>
 			
-			Angular Dzone Tutorial
+			MYCATOOL
                 </title>        
 		<base href="/">
 		<meta name="description" content="Latest updates and statistic charts">
